now its can display company devices overview for many devices

--- a/react_app/public/index.html
+++ b/react_app/public/index.html
@@ -33,7 +33,7 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
   
   </head>
-  <body>
+  <body class='bg-color-dark-gray'>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
