--- a/react_app/public/index.html
+++ b/react_app/public/index.html
@@ -31,7 +31,9 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-  
+    <!-- Font Awesome 5 Icons -->  
+    <script src='https://kit.fontawesome.com/a076d05399.js'></script>
+
   </head>
   <body class='bg-color-dark-gray'>
     <noscript>You need to enable JavaScript to run this app.</noscript>
