added button for switch dark/light thema

--- a/react_app/public/index.html
+++ b/react_app/public/index.html
@@ -35,9 +35,9 @@
     <script src='https://kit.fontawesome.com/a290fff2ec.js' crossorigin="anonymous"></script>
 
   </head>
-  <body class='bg-color-dark-gray'>
+  <body class='desk-color-primary'>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
+    <div id="root" class='light-thema'></div>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
