fixed css styles

--- a/react_app/public/index.html
+++ b/react_app/public/index.html
@@ -35,7 +35,7 @@
     <script src='https://kit.fontawesome.com/a290fff2ec.js' crossorigin="anonymous"></script>
 
   </head>
-  <body class='desk-color-primary'>
+  <body class='desk-bg-color-primary'>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root" class='light-thema'></div>
     <!--
